# projectX

./: .env.example  .gitignore  DEVLOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml  requirements.txt  test_auth.py
.hypothesis/constants/: 0a811258a4fa8b7d  0aff66e43d8eaa50  34ba7420060de2e0  55369fd97042760e
.hypothesis/examples/04e6b3400353b141/: 4b3dafb1e93a8e1e  c2cbf568c7d97253
.hypothesis/examples/4b3dafb1e93a8e1e/: bd9710f561d69b7b
.kiro/code-reviews/: 2026-01-11-review.md
.kiro/prompts/: code-review.md  execute.md  plan-feature.md  prime.md  update-devlog.md
.kiro/settings/: hooks.json
.kiro/specs/android-notification-monitor/: design.md  requirements.md  tasks.md
.kiro/specs/cli-tool/: design.md  requirements.md  tasks.md
.kiro/specs/codebase-modularization/: design.md  requirements.md  tasks.md
.kiro/specs/crewai-agents/: design.md  requirements.md  tasks.md
.kiro/specs/demo-analytics-quickactions/: design.md  requirements.md  tasks.md
.kiro/specs/mvp-core/: design.md  requirements.md  tasks.md
.kiro/specs/professional-ui-redesign/: design.md  requirements.md  tasks.md
.kiro/specs/telegram-monitor/: design.md  requirements.md  tasks.md
.kiro/specs/ui-overhaul-mobile-integration/: design.md  requirements.md  tasks.md
.kiro/specs/web-dashboard/: design.md  requirements.md  tasks.md
.kiro/steering/: known-issues.md  product.md  structure.md  tech.md
cli/: __init__.py  client.py  config.py  main.py
cli-package/: README.md  pyproject.toml
cli-package/projectx_cli/: __init__.py  client.py  config.py  main.py
docs/images/: .gitkeep
mobile-app/: local.properties  settings.gradle.kts
mobile-app/app/: build.gradle.kts  proguard-rules.pro
mobile-app/app/src/main/: AndroidManifest.xml
mobile-app/app/src/main/java/com/projectx/notificationmonitor/: MainActivity.kt
mobile-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
mobile-app/app/src/main/res/layout/: activity_main.xml
mobile-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
scripts/: generate_telegram_session.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  classifier.py  crew.py  definitions.py  mobile_notification_agent.py  tasks.py  telegram_crew.py
src/api/: __init__.py  deps.py  telegram.py  web.py
src/api/routes/: __init__.py  analytics.py  architecture.py  dashboard.py  demo.py  history.py  keywords.py  mobile_api.py  monitoring_api.py  notifications.py  quick_actions.py  settings.py  vip_senders.py
src/db/: __init__.py  crud.py  database.py  models.py
src/models/: __init__.py  schemas.py
src/services/: __init__.py  analytics.py  demo.py  gmail.py  pipeline.py  telegram.py  telegram_userbot.py  twilio_sms.py
src/templates/: analytics.html  architecture.html  base.html  dashboard.html  history.html  keywords.html  notifications.html  settings.html  vip_senders.html
tests/: test_agents_properties.py
(+9 files in other folders)
